[gd_scene load_steps=10 format=2]

[ext_resource path="res://maze/MazeFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/Main.gd" type="Script" id=2]
[ext_resource path="res://main/CameraController.gd" type="Script" id=3]
[ext_resource path="res://main/AutomataGenerator.gd" type="Script" id=4]
[ext_resource path="res://ui/RedButton.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/Main.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MazeFloor" parent="." instance=ExtResource( 1 )]

[node name="AutomataGenerator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0 )
projection = 1
script = ExtResource( 3 )

[node name="MainUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ControlButtons" type="Control" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NewNoiseButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.05
anchor_bottom = 0.15
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "New Noise"

[node name="IterateButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.05
anchor_bottom = 0.3
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Iterate Once:"

[node name="WallIterateButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.05
anchor_top = 0.45
anchor_right = 0.05
anchor_bottom = 0.45
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Wall Iterate"

[node name="ColourSpacesButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.05
anchor_bottom = 0.6
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Colour Spaces"

[node name="RemoveWallsButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.05
anchor_bottom = 0.75
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Remove Walls"

[node name="DoAllButton" type="Button" parent="MainUI/ControlButtons"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Do All"

[node name="SizeSetting" type="Control" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SetSizeButton" type="Button" parent="MainUI/SizeSetting"]
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.8
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Set Size"

[node name="XSpinBox" type="SpinBox" parent="MainUI/SizeSetting"]
anchor_left = 0.8
anchor_top = 0.65
anchor_right = 0.8
anchor_bottom = 0.65
margin_right = 200.0
margin_bottom = 50.0
theme = SubResource( 1 )
min_value = 21.0
max_value = 2000.0
value = 100.0
rounded = true
allow_greater = true
prefix = "X:"

[node name="YSpinBox" type="SpinBox" parent="MainUI/SizeSetting"]
anchor_left = 0.8
anchor_top = 0.72
anchor_right = 0.8
anchor_bottom = 0.72
margin_right = 200.0
margin_bottom = 50.0
theme = SubResource( 1 )
min_value = 21.0
max_value = 2000.0
value = 100.0
rounded = true
allow_greater = true
prefix = "Y:"

[node name="Info" type="Control" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GenerationsLabel" type="Label" parent="MainUI/Info"]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.1
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "Generations: 0"

[node name="TimeTakenLabel" type="Label" parent="MainUI/Info"]
anchor_left = 0.8
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.15
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "Time Taken: 0ms"

[connection signal="pressed" from="MainUI/ControlButtons/NewNoiseButton" to="." method="_on_NewNoiseButton_pressed"]
[connection signal="button_down" from="MainUI/ControlButtons/IterateButton" to="." method="_on_IterateButton_button_down"]
[connection signal="button_up" from="MainUI/ControlButtons/IterateButton" to="." method="_on_IterateButton_button_up"]
[connection signal="pressed" from="MainUI/ControlButtons/WallIterateButton" to="." method="_on_WallIterateButton_pressed"]
[connection signal="pressed" from="MainUI/ControlButtons/ColourSpacesButton" to="." method="_on_ColourSpacesButton_pressed"]
[connection signal="pressed" from="MainUI/ControlButtons/RemoveWallsButton" to="." method="_on_RemoveWallsButton_pressed"]
[connection signal="pressed" from="MainUI/ControlButtons/DoAllButton" to="." method="_on_DoAllButton_pressed"]
[connection signal="pressed" from="MainUI/SizeSetting/SetSizeButton" to="." method="_on_SetSizeButton_pressed"]
